fixed Some layout issues on desktop

--- a/src/features/app/components/admission/_admission.scss
+++ b/src/features/app/components/admission/_admission.scss
@@ -1,6 +1,6 @@
 .custom-button {
-  width: 85px;
-  height: 85px;
+  width: 140px;
+  height: 70px;
   padding: 0;
 }
 
@@ -10,7 +10,7 @@
 
 .edit {
   font-size: 1em;
-  margin: 10px 0 40px 0;
+  margin: 10px 0 20px 0;
 }
 
 .disabled-message, .error-message {
